# KV2FrameworkCPP

./: .gitignore  CMakeLists.txt  README.md
module/: BodyFrame.cpp  BodyFrame.h  CMakeLists.txt  ColorFrame.cpp  ColorFrame.h  DepthFrame.cpp  DepthFrame.h  ExportHeader.h  KinectSensor.cpp  KinectSensor.h
sample/: CMakeLists.txt  main.cpp
